--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>{{title}}</title>
 </head>
 
 <body>
-    <form>
+    <!-- <form>
         <table>
             <tr>
                 <td>First Name</td>
@@ -56,7 +56,28 @@
                 <td><input type="submit" name="submit" value="Submit"></td>
             </tr>
         </table>
-    </form>
+    </form> -->
+
+    <p>Hello my name is {{fname+" "+lname}}</p>
+    <p>Hello my email is {{email}}</p>
+    <p>Hello my address is {{address.address}} {{address.city}} {{address.state}} {{address.country}} {{address.pin}}</p>
+
+    <p><Button (click)="sayName()">Say my details</Button></p>
+    <p><Button (click)="Details()">Say my details agian</Button></p>
+
+    <p><Button (click)="toggleHobbies()">{{showHobbies ? "Hide Hobbies" : "show hobbies"}}</Button></p>
+
+    <div *ngIf="showHobbies">
+
+        <h3>My Hobbies are </h3>{{hobbies}}
+        <h3>My Daily Foods are </h3>
+        <ul>
+            <li *ngFor="let food of foods ; let i = index">
+                {{food}} <button (click)="deleteFood(i)">Delete</button>
+            </li>
+        </ul>
+    </div>
+
 </body>
 
 </html>
