--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <!-- <form>
+    <form>
         <table>
             <tr>
                 <td>First Name</td>
@@ -56,9 +56,9 @@
                 <td><input type="submit" name="submit" value="Submit"></td>
             </tr>
         </table>
-    </form> -->
+    </form>
 
-    <p>Hello my name is {{fname+" "+lname}}</p>
+    <!-- <p>Hello my name is {{fname+" "+lname}}</p>
     <p>Hello my email is {{email}}</p>
     <p>Hello my address is {{address.address}} {{address.city}} {{address.state}} {{address.country}} {{address.pin}}</p>
 
@@ -76,7 +76,7 @@
                 {{food}} <button (click)="deleteFood(i)">Delete</button>
             </li>
         </ul>
-    </div>
+    </div> -->
 
 </body>
 
